# dprint-plugin-oxc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check_updates.yml  ci.yml  publish_npm.yml
deployment/: schema.json
deployment/npm/: README.md  package-lock.json  package.json  setup.js
scripts/: ai_fix.ts  generateReleaseNotes.ts  update.ts
src/: format_text.rs  wasm_plugin.rs
src/configuration/: configuration.rs  resolve_config.rs
tests/: test.rs
tests/specs/: ConfigArrowParenthesesAlways.txt  ConfigArrowParenthesesAsNeeded.txt  ConfigAttributePosition.txt  ConfigEmbeddedLanguageFormatting.txt  ConfigExpand.txt  ConfigExpandNever.txt  ConfigExperimentalSortImports.txt  ConfigExperimentalSortImportsCustomGroups.txt  ConfigExperimentalSortImportsDesc.txt  ConfigExperimentalSortImportsGroups.txt  ConfigExperimentalTailwindcss.txt  ConfigExperimentalTernaries.txt  ConfigIndentSpaces.txt  ConfigIndentTabs.txt  ConfigJsx.txt  ConfigQuoteStyleDouble.txt  ConfigQuoteStyleSingle.txt  ConfigSpecific.txt  ConfigTrailingCommasAll.txt  ConfigTrailingCommasNone.txt  EmbeddedHtml.txt  EmbeddedMarkdown.txt  ExtensionsCjs.txt  ExtensionsCts.txt  ExtensionsJs.txt  ExtensionsJsx.txt  ExtensionsMjs.txt  ExtensionsMts.txt
